@@ -1211,6 +1211,22 @@ public class InternetAddress extends Address implements Cloneable {
 		    inquote = true;
 		}
 		continue;
+	    } else if (c == '\r') {
+		// peek ahead, next char must be LF
+		if (i + 1 < len && addr.charAt(i + 1) != '\n')
+		    throw new AddressException(
+			"Quoted local address contains CR without LF", addr);
+	    } else if (c == '\n') {
+		/*
+		 * CRLF followed by whitespace is allowed in a quoted string.
+		 * We allowed naked LF, but ensure LF is always followed by
+		 * whitespace to prevent spoofing the end of the header.
+		 */
+		if (i + 1 < len && addr.charAt(i + 1) != ' ' &&
+				    addr.charAt(i + 1) != '\t')
+		    throw new AddressException(
+		     "Quoted local address contains newline without whitespace",
+			addr);
 	    }
 	    if (inquote)
 		continue;
@@ -1255,11 +1271,20 @@ public class InternetAddress extends Address implements Cloneable {
 
 	if (addr.charAt(start) == '.')
 	    throw new AddressException("Domain starts with dot", addr);
+	boolean inliteral = false;
 	for (i = start; i < len; i++) {
 	    c = addr.charAt(i);
-	    if (c == '[')
-		return;		// domain literal, don't validate
-	    if (c <= 040 || c >= 0177)
+	    if (c == '[') {
+		if (i != start)
+		    throw new AddressException(
+				"Domain literal not at start of domain", addr);
+		inliteral = true;	// domain literal, don't validate
+	    } else if (c == ']') {
+		if (i != len - 1)
+		    throw new AddressException(
+			    "Domain literal end not at end of domain", addr);
+		inliteral = false;
+	    } else if (c <= 040 || c >= 0177)
 		throw new AddressException(
 				"Domain contains control or whitespace", addr);
 	    // RFC 2822 rule
@@ -1275,12 +1300,14 @@ public class InternetAddress extends Address implements Cloneable {
 	     * <let-dig-hyp> ::= <let-dig> | "-"
 	     * <let-dig> ::= <letter> | <digit>
 	     */
-	    if (!(Character.isLetterOrDigit(c) || c == '-' || c == '.'))
-		throw new AddressException(
-				"Domain contains illegal character", addr);
-	    if (c == '.' && lastc == '.')
-		throw new AddressException(
-				"Domain contains dot-dot", addr);
+	    if (!inliteral) {
+		if (!(Character.isLetterOrDigit(c) || c == '-' || c == '.'))
+		    throw new AddressException(
+				    "Domain contains illegal character", addr);
+		if (c == '.' && lastc == '.')
+		    throw new AddressException(
+				    "Domain contains dot-dot", addr);
+	    }
 	    lastc = c;
 	}
 	if (lastc == '.')
